plate-parser/k8s/echoservice-namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: echoservice-ns
  labels:
    name: echoservice
